--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         </p>
     </header>
 
-    <form action="https://formspree.io/f/xkgkgpkg" method="POST" enctype="multipart/form-data">
+    <form action="https://pertukvan1.getform.com/omokp">
         
         <!-- بەشی یەکەم -->
         <section class="form-section">
