--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
         </p>
     </header>
 
-    <form action="https://pertukvan1.getform.com/omokp">
-        
+<form action="https://pertukvan1.getform.com/omokp" method="POST" enctype="multipart/form-data">
+    
         <!-- بەشی یەکەم -->
         <section class="form-section">
             <h2><i class="fas fa-user"></i> یەکەم: زانیاریی کەسی</h2>
