--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         </p>
     </header>
 
-<form action="https://pertukvan1.getform.com/omokp" method="POST" enctype="multipart/form-data">
+<form action="https://pertukvan.getform.com/omokp" method="POST" enctype="multipart/form-data">
     
         <!-- بەشی یەکەم -->
         <section class="form-section">
