--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     </header>
 
 <form action="https://pertukvan.getform.com/omokp" method="POST" enctype="multipart/form-data">
-    
+    <input type="hidden" name="_next" value="https://www.pertukvan.com">
         <!-- بەشی یەکەم -->
         <section class="form-section">
             <h2><i class="fas fa-user"></i> یەکەم: زانیاریی کەسی</h2>
